// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`ssr: Self closing - html 1`] = `"<input type="text">"`;

exports[`ssr: Self closing - svg 1`] = `"<polygon points="0,100 50,25 50,75 100,0"></polygon>"`;

exports[`ssr: Falsey - undefined 1`] = `"<div></div>"`;

exports[`ssr: Falsey - null 1`] = `"<div></div>"`;

exports[`ssr: Falsey - false 1`] = `"<div></div>"`;

exports[`ssr: Falsey - "" 1`] = `"<div></div>"`;

exports[`ssr: Falsey - 0 1`] = `"<div></div>"`;

exports[`ssr: Falsey - NaN 1`] = `"<div></div>"`;

exports[`ssr: Bad template - NaN 1`] = `"<div></div>"`;

exports[`ssr: Conditional 1`] = `"<div>hello</div>"`;

exports[`ssr: Style attribute 1`] = `"<div style="background-color: blue; margin: 12px; --cssVar: red;">styles</div>"`;

exports[`ssr: data-trigger attribute 1`] = `"<div data-trigger="click->random focus->thing">triggers</div>"`;

exports[`ssr: kebab-case attributes 1`] = `
"<div data-trigger="click->click" data-address="address" data-mode="mode"
x-prefix="x"></div>"
`;

exports[`ssr: Array of templates 1`] = `
"<ul>
    <li>0</li>
    <li>1</li>
    <li>2</li>
    <li>3</li>
    <li>4</li>
    <li>5</li>
    <li>6</li>
    <li>7</li>
    <li>8</li>
    <li>9</li>
</ul>"
`;

exports[`ssr: Should not throw on script tag with trusted attribute 1`] = `"<script type="module" src="main.js"></script>"`;

exports[`ssr: Escapes children 1`] = `
"<div>&lt;script type=&quot;text/javascript&quot;&gt; const hostRegex = /^https?://([^/]+)/.*$/i;
    const host = document.URL.replace(hostRegex, &#39;$1&#39;); const socket
    = new WebSocket(/); const reload = () =&gt;{ location.reload(); console.log(&#39;...reloading&#39;);
    }; socket.addEventListener(&#39;message&#39;, reload); console.log(&#39;[plaited]
    listening for file changes&#39;); &lt;/script&gt;</div>"
`;

exports[`ssr: Does not escape children when trusted 1`] = `
"<div>
    <script type="text/javascript">
        const hostRegex = /^https?://([^/]+)/.*$/i;
        const host = document.URL.replace(hostRegex, '$1');
        const socket = new WebSocket(/);
        const reload = () =>{
          location.reload();
          console.log('...reloading');
        };
        socket.addEventListener('message', reload);
        console.log('[plaited] listening for file changes');
    </script>
</div>"
`;

exports[`ssr: Non declarative shadow DOM template 1`] = `
"<ul>
    <template><span>I am a span!!!</span>
    </template>
    <li>item-0</li>
    <li>item-1</li>
    <li>item-2</li>
    <li>item-3</li>
    <li>item-4</li>
    <li>item-5</li>
    <li>item-6</li>
    <li>item-7</li>
    <li>item-8</li>
    <li>item-9</li>
</ul>"
`;

exports[`ssr: Fragment 1`] = `
"<li>In 5</li>
<li>In 4</li>
<li>In 3</li>
<li>In 2</li>
<li>In 1</li>
<li>Blast Off!!!</li>"
`;

exports[`ssr: Declarative shadow dom hoisting its styles 1`] = `
"<nested-component>
    <template shadowrootmode="open" shadowrootdelegatesfocus="true">
        <style>
            .nested-label_LTU0Mz { font-weight: bold; }
        </style><span class="nested-label_LTU0Mz">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-component>"
`;

exports[`ssr: Declarative shadow dom with host styles 1`] = `
"<style>
    host: { display: flex; flex-direction: column; }
</style>
<nested-component>
    <template shadowrootmode="open" shadowrootdelegatesfocus="true">
        <style>
            .nested-label_LTU0Mz { font-weight: bold; }
        </style><span class="nested-label_LTU0Mz">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-component>"
`;

exports[`ssr: Declarative shadow dom with styled slotted component 1`] = `
"<style>
    .slotted-paragraph_LTc5ND { color: rebeccapurple; }
</style>
<nested-component>
    <template shadowrootmode="open" shadowrootdelegatesfocus="true">
        <style>
            .nested-label_LTU0Mz { font-weight: bold; }
        </style><span class="nested-label_LTU0Mz">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
    <p class="slotted-paragraph_LTc5ND" slot="nested">slotted paragraph</p>
</nested-component>"
`;

exports[`ssr: Declarative shadow dom with another declarative shadow dom 1`] = `
"<top-component>
    <template shadowrootdelegatesfocus="true" shadowrootmode="open">
        <style>
            .slotted-paragraph_LTc5ND { color: rebeccapurple; }
        </style>
        <nested-component>
            <template shadowrootmode="open" shadowrootdelegatesfocus="true">
                <style>
                    .nested-label_LTU0Mz { font-weight: bold; }
                </style><span class="nested-label_LTU0Mz">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p class="slotted-paragraph_LTc5ND" slot="nested">slotted paragraph</p>
        </nested-component>
    </template>
</top-component>"
`;

exports[`ssr: Declarative shadow dom with another declarative shadow dom plus host styles 1`] = `
"<style>
    :host { display: block; }
</style>
<top-component>
    <template shadowrootdelegatesfocus="true" shadowrootmode="open">
        <style>
            .slotted-paragraph_LTc5ND { color: rebeccapurple; }
        </style>
        <nested-component>
            <template shadowrootmode="open" shadowrootdelegatesfocus="true">
                <style>
                    .nested-label_LTU0Mz { font-weight: bold; }
                </style><span class="nested-label_LTU0Mz">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p class="slotted-paragraph_LTc5ND" slot="nested">slotted paragraph</p>
        </nested-component>
    </template>
</top-component>"
`;

exports[`ssr: Declarative shadow dom with another declarative shadow dom plus host styles and child 1`] = `
"<style>
    :host { display: block; }.image_Mjc4MD { width: 100%; aspect-ratio: 16 / 9; }
</style>
<top-component>
    <template shadowrootdelegatesfocus="true" shadowrootmode="open">
        <style>
            .slotted-paragraph_LTc5ND { color: rebeccapurple; }
        </style>
        <nested-component>
            <template shadowrootmode="open" shadowrootdelegatesfocus="true">
                <style>
                    .nested-label_LTU0Mz { font-weight: bold; }
                </style><span class="nested-label_LTU0Mz">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p class="slotted-paragraph_LTc5ND" slot="nested">slotted paragraph</p>
        </nested-component>
    </template>
    <img class="image_Mjc4MD">
</top-component>"
`;

exports[`ssr: Properly hoist and deduplicates multiple stylesheets on a single node 1`] = `
"<style>
    .a_NTA5Nj { width: 100%; }.a_LTIzMT { color: blue; }
</style>
<div></div>"
`;

exports[`ssr: Trims whitespace 1`] = `"<div>trims white-space</div>"`;
